# Squanchy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
runtime/: wasm-rt.h  wasm_runtime.cpp
samples/: add_mutated.wasm
samples/add/: add.wasm
samples/obf_1/: execute.c  obf_w2c.c  obf_w2c.h
samples/reeverse_demo/: add.c  run_demo.sh
samples/z3_memory/: loadstore.ll  loadstore2.ll  loadstore3.ll  loadstore4.ll  loadstore5.ll  loadstore_malloc1.ll  mba_non_linear1.ll
samples/zcrambler/: execute.c
src/: ConstSynthesis.cpp  ConstSynthesis.h  ConstantSynthesis.cpp  ConstantSynthesis.h  Deobfuscator.cpp  Deobfuscator.h  LLVMExtract.cpp  LLVMExtract.h  LLVMHelpers.h  SiMBAPass.cpp  SiMBAPass.h  Solver.cpp  Solver.h  SolverCache.cpp  SolverCache.h  Squanchy.cpp  SymLLVM.cpp  SymLLVM.h  squanchy.cpp
